tests/neg/runtimeNames.stk
import stk.runtime.JS    // error

fun main = JS.print "hello\n"  // error // error
